--- a/css/resume.css
+++ b/css/resume.css
@@ -176,17 +176,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #000099 !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #000099 !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #5371BE;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #0066B4;
 }
