--- a/css/resume.css
+++ b/css/resume.css
@@ -176,11 +176,11 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #000099 !important;
+  background-color: #48AB8D !important;
 }
 
 .text-primary {
-  color: #000099 !important;
+  color: #48AB8D !important;
 }
 
 a {
